--- a/learn_bigdata_first03.ipynb
+++ b/learn_bigdata_first03.ipynb
@@ -95,6 +95,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "195\n",
+      "285\n",
+      "370\n",
+      "450\n",
+      "525\n",
+      "595\n",
+      "660\n",
+      "720\n",
+      "775\n",
+      "825\n",
+      "870\n",
+      "910\n",
+      "945\n",
+      "975\n",
+      "1000\n",
+      "1020\n",
+      "1035\n",
+      "1045\n",
+      "1050\n",
+      "1050\n",
+      "1045\n",
+      "1035\n",
+      "1020\n",
+      "1000\n",
+      "975\n",
+      "945\n",
+      "910\n",
+      "870\n",
+      "825\n",
+      "775\n",
+      "720\n",
+      "660\n",
+      "595\n",
+      "525\n",
+      "450\n",
+      "370\n",
+      "285\n",
+      "195\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 0\n",
+    "for i in range(100,-105,-5):\n",
+    "    print(k)\n",
+    "    k += i"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
